--- a/src/app/components/mini-cart/mini-cart.component.html
+++ b/src/app/components/mini-cart/mini-cart.component.html
@@ -4,7 +4,7 @@
 </button>
 
 <div class="backdrop" [class.show]="open" (click)="closeCart()"></div>
-<aside class="drawer" [class.open]="open" role="dialog" aria-modal="true">
+<aside class="drawer mini-cart" [class.open]="open" role="dialog" aria-modal="true">
   <header class="drawer-header">
     <h3 tabindex="0">Mi carrito</h3>
     <button class="close-btn" (click)="closeCart()" aria-label="Cerrar">✖</button>
