fix(admin-layout): constrain logo size

--- a/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
+++ b/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
@@ -19,6 +19,12 @@
     color: #fff;
   }
 
+  .logo-img {
+    height: 40px;
+    width: auto;
+    object-fit: contain;
+  }
+
   .brand-text {
     font-weight: bold;
   }
