feat(admin-drawer): sanitize icons and add config menu

--- a/src/app/components/admin-drawer/admin-drawer.component.html
+++ b/src/app/components/admin-drawer/admin-drawer.component.html
@@ -1,7 +1,7 @@
 <aside class="admin-drawer" [class.open]="isOpen">
   <nav>
     <a *ngFor="let item of menuItems" (click)="navigate(item)">
-      <svg [innerHTML]="item.icon"></svg>
+      <span class="icon" [innerHTML]="sanitize(item.icon)"></span>
       <span>{{ item.label }}</span>
     </a>
   </nav>
