--- a/src/app/components/pages/cuentos/cuentos.component.html
+++ b/src/app/components/pages/cuentos/cuentos.component.html
@@ -58,7 +58,7 @@
     <button class="btn-filter" type="button">Filtrar</button>
     <button class="btn-clear" type="button" (click)="limpiarFiltros()">Limpiar</button>
   </div>
-  <a class="cta-link" href="#">¿No sabes dónde empezar? ➞ Ver los 5 cuentos más leídos</a>
+  <a class="cta-link" href="#">¿No sabes dónde empezar? → Ver los 5 más leídos</a>
   <div class="grid-cuentos">
     <app-cuento-card
       *ngFor="let cuento of filteredCuentos"
@@ -66,7 +66,9 @@
       (agregar)="agregarAlCarrito($event)"
     ></app-cuento-card>
   </div>
-  <p class="no-results" *ngIf="filteredCuentos.length === 0">
-    ¡Uy! No encontramos ese cuento. Prueba con otra palabra clave o explora nuestras categorías destacadas.
-  </p>
+  <div class="no-results" *ngIf="filteredCuentos.length === 0">
+    <span class="icon">⚠</span>
+    <span>¡Uy! No encontramos ese cuento. Prueba con otra palabra clave.</span>
+  </div>
 </div>
+
