--- a/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
+++ b/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
@@ -2,6 +2,7 @@
 @import '../../../../../styles/variables';
 @import '../../../../../styles/mixins';
 
+/*
 .admin-navbar {
   background-color: $brand-primary;
   color: #fff;
@@ -29,6 +30,7 @@
     font-weight: bold;
   }
 }
+*/
 
 .admin-content {
   padding: $spacing-unit;
